solc_mutator_ossfuzz_seed_corpus/test_sol/test_91a5702e4f11a537f7e5eafd10888fdbe871252aa3d390a7b483d732c9433a94_099aa24ad56fc2fedb245bfafbda12313c70f1b6_sol.sol
==== Source:  ====

==== Source: su0.sol ====
pragma solidity >= 0.0.0;
contract C0 {
  bool immutable  s0 = false;
  mapping(uint184 => uint200)   s1;
  mapping(uint104 => address[9][][4])  public s2;
  int232 immutable public s3;
  constructor(int232 i0)   {
    s3 = int232(3450873173395281893717377931138512726225554486085193277581262111899647);
    s1[uint184(12632352121866457103596634815216668610615487696789445676)] *= ((uint200(581488588993812460102517202022115795683449275688656524464572) % (((uint200(207486211693370845575496603371059665572252066962818344479702) * uint200(1484465633709316518730059045567734938542755155503090303009467)) + uint200(1606938044258990275541962092341162602522202993782792835301375)) ^ uint200(1301761212465485885923221447923953659937934387539858668522603))) * uint200(1606938044258990275541962092341162602522202993782792835301375));
    {
      revert(string.concat(string("ffffffffffff00000000000000000000000000000000000000000000000000000000")));
    }
  }
}

==== Source: su1.sol ====
library L0 {
  error er0(function (address payable, bytes10, uint16) external   ep0);
  error er1();
}
pragma solidity >= 0.0.0;
struct St0 {
  bool[6][][][][1] el0;
  int8 el1;
  bool el2;
}
struct St1 {
  address payable el0;
  bool el1;
}
// ----
// Warning 5667: (su0.sol:200-209): Unused function parameter. Remove or comment out the variable name to silence this warning.
// CodeGenerationError 1284: Some immutables were read from but never assigned, possibly because of optimization.
